--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Your Name | Creative Portfolio</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+<header>
+  <h1>Your Name</h1>
+  <p>Photographer | Video Editor | Graphic Designer</p>
+</header>
+
+<nav>
+  <a href="#services">Services</a>
+  <a href="#portfolio">Portfolio</a>
+  <a href="#about">About</a>
+  <a href="#contact">Contact</a>
+</nav>
+
+<section id="services">
+  <h2>Services</h2>
+  <div class="service">Photography</div>
+  <div class="service">Video Editing</div>
+  <div class="service">Graphic Design</div>
+</section>
+
+<section id="portfolio">
+  <h2>Portfolio</h2>
+  <img src="assets/images/work1.jpg">
+</section>
+
+<section id="about">
+  <h2>About Me</h2>
+  <p>I am a creative professional...</p>
+</section>
+
+<section id="contact">
+  <h2>Contact</h2>
+  <form>
+    <input type="text" placeholder="Name">
+    <input type="email" placeholder="Email">
+    <textarea placeholder="Message"></textarea>
+    <button>Send</button>
+  </form>
+</section>
+
+<script src="js/main.js"></script>
+</body>
+</html>
